--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="favorite_words">お気に入りword</string>
     <string name="not_registered">未登録</string>
     <string name="my_page_url">マイページURL</string>
+    <string name="update">更新</string>
+    <string name="cancel">キャンセル</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
