--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="user_tab">ユーザー</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="category_name_kotlin">Kotlin</string>
+    <string name="category_name_python">Python</string>
+    <string name="category_name_swift">Swift</string>
 </resources>
